# mozart

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  TODOS.md  package-lock.json  package.json
cli/: Cargo.toml  USAGE.md
cli/src/: main.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  schema.sql  tmux.rs
src-tauri/src/backend/: claude_cli.rs  mod.rs
src/lib/: ChatPane.svelte  TaskList.svelte  api.ts  state.svelte.test.ts  state.svelte.ts  types.ts
src/routes/: +page.svelte
