[package]
name = "mozart"
version = "0.1.0"
description = "Mozart: a hands-on learning project for agent orchestration at scale"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mozart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
dirs = "5"
tauri-plugin-dialog = "2.7.1"

